--- a/lc_prep_data_for_ml.ipynb
+++ b/lc_prep_data_for_ml.ipynb
@@ -278,148 +278,148 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>revol_util</th>\n",
-       "      <th>num_op_rev_tl</th>\n",
-       "      <th>il_util</th>\n",
-       "      <th>inq_last_12m</th>\n",
-       "      <th>open_rv_24m</th>\n",
-       "      <th>delinq_amnt</th>\n",
+       "      <th>mo_sin_old_il_acct</th>\n",
+       "      <th>total_cu_tl</th>\n",
+       "      <th>open_il_12m</th>\n",
+       "      <th>chargeoff_within_12_mths</th>\n",
+       "      <th>max_bal_bc</th>\n",
        "      <th>mo_sin_rcnt_rev_tl_op</th>\n",
-       "      <th>mort_acc</th>\n",
        "      <th>tot_cur_bal</th>\n",
-       "      <th>total_bc_limit</th>\n",
+       "      <th>num_tl_90g_dpd_24m</th>\n",
+       "      <th>num_il_tl</th>\n",
+       "      <th>num_bc_sats</th>\n",
        "      <th>...</th>\n",
-       "      <th>mths_since_rcnt_il</th>\n",
-       "      <th>tot_hi_cred_lim</th>\n",
-       "      <th>num_accts_ever_120_pd</th>\n",
-       "      <th>pub_rec</th>\n",
-       "      <th>avg_cur_bal</th>\n",
-       "      <th>num_actv_bc_tl</th>\n",
+       "      <th>total_rev_hi_lim</th>\n",
+       "      <th>mo_sin_rcnt_tl</th>\n",
+       "      <th>revol_bal</th>\n",
+       "      <th>num_tl_op_past_12m</th>\n",
        "      <th>mths_since_recent_bc</th>\n",
-       "      <th>bc_open_to_buy</th>\n",
-       "      <th>installment</th>\n",
+       "      <th>pub_rec</th>\n",
+       "      <th>months_in_loan</th>\n",
+       "      <th>tax_liens</th>\n",
+       "      <th>tot_hi_cred_lim</th>\n",
        "      <th>default</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.005</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>74.0</td>\n",
+       "      <td>132.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>141.0</td>\n",
        "      <td>18.0</td>\n",
-       "      <td>4.0</td>\n",
        "      <td>150592.0</td>\n",
-       "      <td>30500.0</td>\n",
-       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>7.0</td>\n",
-       "      <td>191216.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>25099.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>31000.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>141.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>18.0</td>\n",
-       "      <td>30359.0</td>\n",
-       "      <td>93.10</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>191216.0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.339</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>63.0</td>\n",
+       "      <td>77.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4829.0</td>\n",
        "      <td>3.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>28880.0</td>\n",
-       "      <td>22000.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>4.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>33.0</td>\n",
+       "      <td>33800.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>11449.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>61551.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2222.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>10551.0</td>\n",
-       "      <td>166.03</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.360</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>102.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>122.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>131726.0</td>\n",
-       "      <td>10000.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>132817.0</td>\n",
-       "      <td>3.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>10977.0</td>\n",
+       "      <td>3944.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>131726.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>13900.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5004.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>10.0</td>\n",
-       "      <td>4996.0</td>\n",
-       "      <td>232.44</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>132817.0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0.385</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>113.0</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>125.0</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>1692.0</td>\n",
        "      <td>7.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>74220.0</td>\n",
-       "      <td>2300.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>72124.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>23.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>12370.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4400.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>1692.0</td>\n",
+       "      <td>3.0</td>\n",
        "      <td>45.0</td>\n",
-       "      <td>608.0</td>\n",
-       "      <td>326.92</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>72124.0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0.265</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>91.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>3.0</td>\n",
+       "      <td>134.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>10750.0</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>76475.0</td>\n",
-       "      <td>80300.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>153679.0</td>\n",
-       "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>6373.0</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>80300.0</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>59034.0</td>\n",
-       "      <td>915.36</td>\n",
+       "      <td>21266.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>153679.0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -428,40 +428,40 @@
        "</div>"
       ],
       "text/plain": [
-       "   revol_util  num_op_rev_tl  il_util  inq_last_12m  open_rv_24m  delinq_amnt  \\\n",
-       "0       0.005            6.0     74.0           2.0          1.0          0.0   \n",
-       "1       0.339           13.0     63.0           1.0          2.0          0.0   \n",
-       "2       0.360            7.0    102.0           4.0          2.0          0.0   \n",
-       "3       0.385            3.0    113.0           4.0          1.0          0.0   \n",
-       "4       0.265            9.0     91.0           0.0          3.0          0.0   \n",
+       "   mo_sin_old_il_acct  total_cu_tl  open_il_12m  chargeoff_within_12_mths  \\\n",
+       "0               132.0          2.0          1.0                       0.0   \n",
+       "1                77.0          1.0          0.0                       0.0   \n",
+       "2               122.0          1.0          0.0                       0.0   \n",
+       "3               125.0          1.0          2.0                       0.0   \n",
+       "4               134.0          0.0          2.0                       0.0   \n",
        "\n",
-       "   mo_sin_rcnt_rev_tl_op  mort_acc  tot_cur_bal  total_bc_limit  ...  \\\n",
-       "0                   18.0       4.0     150592.0         30500.0  ...   \n",
-       "1                    3.0       0.0      28880.0         22000.0  ...   \n",
-       "2                    1.0       0.0     131726.0         10000.0  ...   \n",
-       "3                    7.0       0.0      74220.0          2300.0  ...   \n",
-       "4                    2.0       1.0      76475.0         80300.0  ...   \n",
+       "   max_bal_bc  mo_sin_rcnt_rev_tl_op  tot_cur_bal  num_tl_90g_dpd_24m  \\\n",
+       "0       141.0                   18.0     150592.0                 0.0   \n",
+       "1      4829.0                    3.0      28880.0                 0.0   \n",
+       "2      3944.0                    1.0     131726.0                 0.0   \n",
+       "3      1692.0                    7.0      74220.0                 0.0   \n",
+       "4     10750.0                    2.0      76475.0                 0.0   \n",
        "\n",
-       "   mths_since_rcnt_il  tot_hi_cred_lim  num_accts_ever_120_pd  pub_rec  \\\n",
-       "0                 7.0         191216.0                    0.0      0.0   \n",
-       "1                33.0          61551.0                    1.0      1.0   \n",
-       "2                16.0         132817.0                    3.0      0.0   \n",
-       "3                 7.0          72124.0                    0.0      1.0   \n",
-       "4                 4.0         153679.0                    1.0      0.0   \n",
+       "   num_il_tl  num_bc_sats  ...  total_rev_hi_lim  mo_sin_rcnt_tl  revol_bal  \\\n",
+       "0        7.0          4.0  ...           31000.0             7.0      141.0   \n",
+       "1        6.0          4.0  ...           33800.0             3.0    11449.0   \n",
+       "2       19.0          3.0  ...           13900.0             1.0     5004.0   \n",
+       "3       23.0          1.0  ...            4400.0             7.0     1692.0   \n",
+       "4       12.0          9.0  ...           80300.0             2.0    21266.0   \n",
        "\n",
-       "   avg_cur_bal  num_actv_bc_tl  mths_since_recent_bc  bc_open_to_buy  \\\n",
-       "0      25099.0             1.0                  18.0         30359.0   \n",
-       "1       2222.0             3.0                   3.0         10551.0   \n",
-       "2      10977.0             2.0                  10.0          4996.0   \n",
-       "3      12370.0             1.0                  45.0           608.0   \n",
-       "4       6373.0             4.0                   2.0         59034.0   \n",
+       "   num_tl_op_past_12m  mths_since_recent_bc  pub_rec  months_in_loan  \\\n",
+       "0                 1.0                  18.0      0.0             2.0   \n",
+       "1                 2.0                   3.0      1.0             1.0   \n",
+       "2                 2.0                  10.0      0.0            12.0   \n",
+       "3                 3.0                  45.0      1.0            13.0   \n",
+       "4                 3.0                   2.0      0.0            14.0   \n",
        "\n",
-       "   installment  default  \n",
-       "0        93.10        0  \n",
-       "1       166.03        0  \n",
-       "2       232.44        0  \n",
-       "3       326.92        0  \n",
-       "4       915.36        0  \n",
+       "   tax_liens  tot_hi_cred_lim  default  \n",
+       "0        0.0         191216.0        0  \n",
+       "1        0.0          61551.0        0  \n",
+       "2        0.0         132817.0        0  \n",
+       "3        0.0          72124.0        0  \n",
+       "4        0.0         153679.0        0  \n",
        "\n",
        "[5 rows x 69 columns]"
       ]
@@ -621,7 +621,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
